--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="active" href="https://nikode1.github.io">Home</a>
+      <a class="active" href="https://kholtastrophe.github.io">Home</a>
       <a href="https://ainu.pw">osu!Ainu</a>
       <a href="https://github.com/nikode1">Github</a>
       <a href="/contact">Contact</a>
