--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="topnav">
       <a class="active" href="https://kholtastrophe.github.io">Home</a>
       <a href="https://ainu.pw">osu!Ainu</a>
-      <a href="https://github.com/nikode1">Github</a>
+      <a href="https://github.com/kholtastrophe">Github</a>
       <a href="/contact">Contact</a>
     </div>
     <p> Hello and welcome to my  site. I'm a owner of osu!Ainu </p>
