--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="active" href="https://nikode1.github.io">Home</a>
+      <a class="active" href="https://kholtastrophe.github.io">Home</a>
       <a href="https://ainu.pw">osu!Ainu</a>
-      <a href="https://github.com/nikode1">Github</a>
+      <a href="https://github.com/kholtastrophe">Github</a>
     </div>
     <p>Discord Kholtastrophe#3411</p>
     <p>Developer ID: 389811973367267330</p>
   </body>
- 
