--- a/contact.html
+++ b/contact.html
@@ -13,4 +13,5 @@
     </div>
     <p>Discord Kholtastrophe#3411</p>
     <p>Developer ID: 389811973367267330</p>
+    <p> Or join my server https://discord.gg/uMHwPub</p>
   </body>
