--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,5 @@
     </div>
     <p>Discord Kholtastrophe#3411</p>
     <p>Developer ID: 389811973367267330</p>
-    <p>Or join my server <a href="https://discord.gg/uMHwPub"></a></p>
+    <a href="https://discord.gg/uMHwPub">Join my server</a>
   </body>
